deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javabot-springboot-deployment
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: javabot-springboot
  template:
    metadata:
      labels:
        app: javabot-springboot
    spec:
      containers:
      - name: javabot-springboot
        image: qro.ocir.io/ax6svbbnc2oh/registry-java-bot:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:  
      - name: ocirsecret  

---
apiVersion: v1
kind: Service
metadata:
  name: javabot-springboot-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: javabot-springboot
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cluster
spec:
  ingressClassName: nginx
  rules:
  - host: "api.romongo.uk"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: javabot-springboot-service
              port:
                number: 8080
  - host: "frontend.romongo.uk"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: react-frontend-service
              port:
                number: 8080
## RECUERDA SI QUIERES HACER LLAMADAS A OTRO CLUSER IP DENTRO DEL MISMO NAMESPACE: http://<myservice>.svc.cluster.local:SERVICEPORT
# ejemplo que ya probe desde una pod http://javabot-springboot-service:8080/demo/all
